package generator;
import "anttweak.proto";

message Config
{
  optional float radius = 1;
  optional float height = 2;
  optional uint32 radial_segments = 3;
  optional uint32 height_segments = 4;
}
